FIX: Weird button display on Firefox

--- a/assets/stylesheets/common/subscribe.scss
+++ b/assets/stylesheets/common/subscribe.scss
@@ -32,12 +32,8 @@
   }
 
   .btn-discourse-subscriptions-subscribe {
-    border-radius: 5px;
     flex-direction: column;
-    width: 6em;
 
-    display: inline-block;
-    margin: 0;
     padding: 10px 20px;
     border: var(--d-input-border);
     border-radius: 8px;
